--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev", 
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.23.0",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7"
   }
 }
