--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images": "^1.2.0-beta.7",
+    "react-photo-gallery": "^8.0.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
