--- a/package.json
+++ b/package.json
@@ -7,20 +7,27 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
+    "bricks.js": "^1.8.0",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
+    "macy": "^2.5.1",
     "mongodb": "^3.5.9",
-    "next": "latest",
+    "next": "^11.0.1",
+    "next-mdx-remote": "^3.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-images": "^1.2.0-beta.7",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-masonry-component": "^6.3.0",
     "react-photo-gallery": "^8.0.0",
+    "react-stack-grid": "^0.7.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
+    "react-xmasonry": "^3.0.5",
     "tailwindcss": "^2.2.7"
   }
 }
