--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.7.0",
     "@tailwindcss/typography": "^0.4.1",
     "bricks.js": "^1.8.0",
     "date-fns": "^2.23.0",
+    "deepmerge": "^4.2.2",
+    "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
+    "hastscript": "^7.0.2",
     "macy": "^2.5.1",
     "mongodb": "^3.5.9",
-    "next": "^11.0.1",
+    "next": "^11.1.0",
     "next-mdx-remote": "^3.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +24,10 @@
     "react-masonry-component": "^6.3.0",
     "react-photo-gallery": "^8.0.0",
     "react-stack-grid": "^0.7.1",
+    "rehype-autolink-headings": "^6.0.0",
+    "rehype-components": "github:marekweb/rehype-components",
+    "rehype-sanitize": "^5.0.0",
+    "rehype-slug": "^5.0.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
