--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.7.0",
     "@tailwindcss/typography": "^0.4.1",
+    "bricks.js": "^1.8.0",
     "date-fns": "^2.23.0",
     "deepmerge": "^4.2.2",
     "framer-motion": "^4.1.17",
@@ -16,11 +17,10 @@
     "hastscript": "^7.0.2",
     "mongodb": "^3.5.9",
     "next": "^12.1.2",
-    "next-mdx-remote": "^3.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-images": "^1.2.0-beta.7",
-    "react-photo-gallery": "^8.0.0",
+    "next-mdx-remote": "^4.0.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-masonry-css": "^1.0.16",
     "rehype-autolink-headings": "^6.0.0",
     "rehype-components": "github:marekweb/rehype-components",
     "rehype-sanitize": "^5.0.0",
