--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.5.9",
     "next": "^12.1.2",
     "next-mdx-remote": "^4.0.3",
+    "photoswipe": "^5.2.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-masonry-css": "^1.0.16",
